--- a/view/manager/css/styles.css
+++ b/view/manager/css/styles.css
@@ -112,7 +112,30 @@ header {
     text-decoration: none;
 }
 
-.accounts, .blacklisted {
+.accounts,
+.blacklisted {
+    background-color: var(--white);
+    border-radius: 10px;
+    margin-bottom: 20px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
+
+.section-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 20px;
+    border-bottom: 1px solid var(--border-color);
+}
+
+/* ACCOUNT MANAGEMENT */
+.back-link {
+    color: var(--primary-color);
+    text-decoration: none;
+}
+
+.accounts,
+.blacklisted {
     background-color: var(--white);
     border-radius: 10px;
     margin-bottom: 20px;
@@ -142,7 +165,8 @@ table {
     border-collapse: collapse;
 }
 
-th, td {
+th,
+td {
     text-align: left;
     padding: 12px 20px;
     border-bottom: 1px solid var(--border-color);
